# aisudo

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  TASKS.md  default-policy.toml
docs/: ARCHITECTURE.md  CLI.md  MVP.md  POLICY.md  PROTOCOL.md  SECURITY.md  TRANSPORTS.md
docs/adr/: 0001-secret-broker-not-full-gate.md  0002-telegram-as-primary-transport.md  0003-user-owned-telegram-bot.md
src/: main.rs
src/audit/: mod.rs
src/cli/: exec.rs  init.rs  mod.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/daemon/: mod.rs
src/grants/: mod.rs
src/policy/: mod.rs
src/protocol/: mod.rs
src/secrets/: mod.rs
src/transport/: mod.rs
