[package]
name = "aisudo"
version = "0.1.0"
edition = "2021"
description = "Sudo for AI agents — policy-driven, human-approved authorization broker"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timestamps
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# HTTP (Telegram, ntfy)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Config / paths
directories = "6"

# Secret store
keyring = "3"

# Filesystem
glob = "0.3"
walkdir = "2"

# Misc
anyhow = "1"
thiserror = "2"
qrcode = "0.14.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
